<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_bestsellers"
        android:icon="@drawable/ic_fire"
        android:title="@string/bestsellers"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shop"
        android:title="@string/basket"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        tools:ignore="MenuTitle" />

</menu>