<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signIn.SignInFragment">

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/tv_sign_in_account"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/t_main_bold"
        android:text="@string/t_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_account"
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/robot_regular"
        android:textColorHint="#a4a2af"
        android:textColor="@color/black"
        android:hint="@string/hint_email"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_account"
        android:layout_width="match_parent"
        android:layout_height="68dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        android:layout_marginTop="20dp"
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/robot_regular"
            android:textColor="@color/black"
            android:hint="@string/hint_password"
            android:drawableEnd="@drawable/ic_eye"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_account"
            android:layout_width="match_parent"
            android:layout_height="68dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robot_regular"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:text="@string/tv_forgot_password"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        android:text="@string/sign_in"
        style="@style/ButtonStyle"/>

    <TextView
        android:id="@+id/tv_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/robot_regular"
        android:textColor="@color/blue"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="17sp"
        android:fontFamily="@font/robot_regular"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@id/tv_create_account"
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>