<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signUp.SignUpFragment">

    <TextView
        android:id="@+id/registration"
        style="@style/Text24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/registration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/robot_regular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#a4a2af"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_account" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/til_email">
        <EditText
            android:id="@+id/et_password"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/robot_regular"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_account"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/warning"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:fontFamily="@font/robot_regular"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        android:layout_marginTop="40dp"
        android:textColor="@color/grey"
        android:text="@string/warning_text"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning" />
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/robot_regular"
        android:text="@string/or_Sign_in"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />
    <View
        android:layout_marginStart="13dp"
        android:layout_width="85dp"
        android:layout_height="1dp"
        android:layout_marginEnd="12dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/tv_sign_in"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
</androidx.constraintlayout.widget.ConstraintLayout>