<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorite.FavoriteFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tab"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:backgroundTint="@color/primary">

            <TextView
                android:id="@+id/tv_find_your_gadgets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:layout_marginStart="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/six_teen_dp"
                style="@style/h1"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/sixty_eight_dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/eight_dp">

                <EditText
                    android:id="@+id/et_search_gadgets"
                    android:paddingStart="@dimen/six_teen_dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="48dp"
                    android:background="@color/white"
                    style="@style/SearchET"
                    android:inputType="text"
                    android:hint="@string/iphone_13_pro_max"
                    android:fontFamily="@font/rubik_regular"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_search"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/accent">

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_search"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/favorite"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/six_teen_sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:isScrollContainer="true"
            tools:listitem="@layout/item_favorite"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginHorizontal="@dimen/twenty_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>