<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="2"
    android:paddingBottom="@dimen/twenty_four_dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container_iv"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_favorite"
            android:src="@drawable/smartphon_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_favorite_1"
                android:src="@drawable/ic_samsung_a52"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_favorite_2"
                android:src="@drawable/ic_samsung_a52"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/two_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_favorite_3"
                android:src="@drawable/ic_samsung_a52"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/two_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six_teen_dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            style="@style/h2"
            android:textSize="12sp"
            android:text="@string/samsung_galaxy_a52_5g" />

        <TextView
            android:textSize="10sp"
            android:text="15 отзывов"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Процессор  "
                style="@style/DetailGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="8-Core Qualcomm Snapdragon 678"
                android:maxLines="2"
                style="@style/DetailGrey"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Основная камера  "
                style="@style/DetailGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="48 MP + 8 MP + 2 MP + 2 MP"
                style="@style/DetailGrey"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Фронтальная камера  "
                style="@style/DetailGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="13 MP"
                style="@style/DetailGrey"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Встроенная память  "
                style="@style/DetailGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="128 Гб"
                style="@style/DetailGrey"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Оперативная память  "
                style="@style/DetailGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="6 Гб"
                style="@style/DetailGrey"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/_45_000"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/six_teen_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/add_to_basket"
            android:textSize="@dimen/twelve_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/twelve_sp"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/delete"
            android:textColor="@color/dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>